# rag.xpu

./: .gitignore  CMakeLists.txt
app/run/: run.cpp
app/server/: CMakeLists.txt  openai_api.hpp  rag_api.hpp  rag_pipeline.hpp  server_handler.hpp  simple_server.cpp
docs/: 2026-03-30-rag-hetero-parallel-hang-debug.md
src/backend/: platform.cpp  platform.hpp
src/backend/ggml/: CMakeLists.txt  ggml.cpp  ggml.hpp  ggml_cluster_manager.cpp  ggml_cluster_manager.hpp  ggml_kv_cache.cpp  ggml_kv_cache.hpp  ggml_kv_pager.cpp  ggml_kv_pager.hpp  ggml_wrapper.cpp
src/backend/opencl/: CMakeLists.txt  README.md  opencl_backend.hpp  opencl_backend_helpers.hpp  opencl_kernels_ops.cpp  opencl_kv_cache.hpp  opencl_memory.cpp  opencl_memory.hpp  opencl_tensor_ops.cpp
src/backend/opencl/kernels/: cpy.cl
src/backend/qnn/: qnn_backend.cpp  qnn_backend.hpp
src/core/: config.cpp  config.hpp  thread_pool.cpp
src/executor/: executor.cpp  executor.hpp
src/graph/: graph.cpp  graph.hpp  node.hpp  op_params.hpp  op_type.hpp
src/model/: model.hpp
src/model/common/: weights.hpp
src/model/module/: CMakeLists.txt  attention.hpp  attention_path.cpp  attention_path.hpp  attention_path_dense.cpp  attention_path_topk.cpp  cluster_attention_path.cpp  cluster_attention_path.hpp  ggml_cluster_profile.cpp  ggml_cluster_profile.hpp  ggml_cluster_runtime.cpp  ggml_cluster_runtime.hpp  ggml_kv_runtime.cpp  ggml_kv_runtime.hpp  norm_attention.cpp  norm_attention.hpp
src/model/qwen2/: qwen2_model.cpp  qwen2_model.hpp
src/model/qwen3/: qwen3_model.cpp  qwen3_model.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
tests/: 2-prompts.sh  CMakeLists.txt  check_thread_pool_shutdown_race.sh  kv_cache_persist_test.cpp  logits_cmp.cpp  qwen2_segmented_cmp.cpp  rag_payload_once.json  run_rag_once.sh  run_server.sh  thread_pool_shutdown_race.cpp
tmp/: 9ce5f6ad-b4c4-4627-b494-92b1175c9cd0_params.py
tools/backend_eval/: README_topk_eval.md  prompts_eval.txt  topk_eval.py
tools/end_to_end/: compile.sh
tools/gguf_config_to_json/: main.cpp
tools/qnn_converter/: llama_model.py  model_params.py
